added support for native jobs (again) removed unnecessary input file copy (JavaGAT provides a sandbox already) fixed poststage file support